# django-fernet-secrets

./: README.md  pyproject.toml
django_fernet_secrets/: apps.py  exceptions.py  settings.py  utils.py
django_fernet_secrets/management/commands/: encrypt_text.py  generate_encryption_key.py
django_fernet_secrets/tests/: test_utils.py
